--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test",
+    "lint": "eslint ."
   },
   "author": "Francisco",
   "license": "ISC",
   "description": "Pruebas",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@eslint/js": "^9.30.0",
+    "@stylistic/eslint-plugin": "^5.0.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.30.0",
+    "globals": "^16.2.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.1"
   }
 }
